Center gamebaord and correctly aligned astroids

--- a/css/master.css
+++ b/css/master.css
@@ -2,6 +2,12 @@ body{
   background: black;
 }
 
+#container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #GameBoard {
   width: 1000px;
   height: 800px;
@@ -17,7 +23,7 @@ body{
   width: 94px;
   background-image: url('rock1.png');
   background-repeat: no-repeat;
-  position: absolute;
+  position: relative;
 }
 
 .Astroid1 {
@@ -25,5 +31,5 @@ body{
   width: 39px;
   background-image: url('rock2.png');
   background-repeat: no-repeat;
-  position: absolute;
+  position: relative;
 }
